--- a/index.html
+++ b/index.html
@@ -6,7 +6,14 @@
 <title>Weather</title>
 </head>
 <body>
-
+<div class="location">
+    <h1 class="location-timezone">Timezone</h1>
+    <p>Icon</p>
+</div>
+<div class="temperature">
+    <div class="temperature-degree">34</div>
+    <div class="temperature-description">Its cold!</div>
+</div>
     <script src="app.js"></script>
 </body>
 </html>
