--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
     <p>Icon</p>
 </div>
 <div class="temperature">
-    <div class="temperature-degree">34</div>
+    <div class="degree-section">
+            <h2 class="temperature-degree">34</h2>
+            <span>F</span>
+    </div>
     <div class="temperature-description">Its cold!</div>
 </div>
+
     <script src="app.js"></script>
 </body>
 </html>
